templates/toxiproxy_template.yaml
---
# Source: toxiproxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-toxiproxy
  labels:
    app.kubernetes.io/name: toxiproxy
    helm.sh/chart: toxiproxy-1.3.8
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: admin
      protocol: TCP
      name: admin
  selector:
    component: main
    app.kubernetes.io/name: toxiproxy
    app.kubernetes.io/instance: release-name
---
# Source: toxiproxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-toxiproxy
  labels:
    app.kubernetes.io/name: toxiproxy
    helm.sh/chart: toxiproxy-1.3.8
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: main
      app.kubernetes.io/name: toxiproxy
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        component: main
        app.kubernetes.io/name: toxiproxy
        helm.sh/chart: toxiproxy-1.3.8
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "2.7.0"
        app.kubernetes.io/managed-by: Helm
      annotations:
        checksum/config: db9c4d26de463a320cb34ac3e72655fb8aba456ab52bdf749a825b25a4b8af12
    spec:
      serviceAccountName: release-name-toxiproxy
      securityContext:
        {}
      containers:
      - name: toxiproxy
        resources:
          {}
        image: "ghcr.io/shopify/toxiproxy:2.7.0"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8474
            name: admin
            protocol: TCP
        livenessProbe:
          periodSeconds: 30
          initialDelaySeconds: 10
          timeoutSeconds: 30
          failureThreshold: 2
          httpGet:
            path: /version
            port: admin
        readinessProbe:
          periodSeconds: 30
          initialDelaySeconds: 10
          timeoutSeconds: 30
          failureThreshold: 2
          httpGet:
            path: /version
            port: admin
        args:
          - "-host"
          - "0.0.0.0"
          - "-port"
          - "8474"
          - "-config"
          - /home/toxiproxy/proxies/config.json
        volumeMounts:
        - mountPath: /home/toxiproxy
          name: working
      volumes:
      - name: working
        emptyDir: {}
      - name: proxies

        emptyDir: {}

      - name: config
        configMap:
          name: release-name-toxiproxy-config
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
---
# Source: toxiproxy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-toxiproxy
  labels:
    app.kubernetes.io/name: toxiproxy
    helm.sh/chart: toxiproxy-1.3.8
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-toxiproxy
                port:
                  number: 80
